Rewrote the build system to be more automated, also rewrote some stuff in navn to be happier with the build system

--- a/Makefile.in
+++ b/Makefile.in
@@ -72,7 +72,7 @@ CCDEPMODE = @CCDEPMODE@
 CFLAGS = -Wall -ansi -pipe -Wshadow -fPIC -pedantic -g -Wl,--export-dynamic $(LIBS) -I$(srcdir)/include -I$(srcdir)
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
-CXX = c++
+CXX = @CXX@
 CXXCPP = @CXXCPP@
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
@@ -152,7 +152,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-EXECUTABLE = @PACKAGE@
+unamepath = @unamepath@
+AUTOMAKE_OPTIONS = foreign
 PERL = $(srcdir)/run-cc.pl
 MODFLAGS = -fPIC -g $(LIBS) -shared -Wl,-soname,
 all: config.h
@@ -165,15 +166,15 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
 	    *$$dep*) \
-	      echo ' cd $(srcdir) && $(AUTOMAKE) --gnu'; \
-	      $(am__cd) $(srcdir) && $(AUTOMAKE) --gnu \
+	      echo ' cd $(srcdir) && $(AUTOMAKE) --foreign'; \
+	      $(am__cd) $(srcdir) && $(AUTOMAKE) --foreign \
 		&& exit 0; \
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu Makefile
+	  $(AUTOMAKE) --foreign Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -475,14 +476,10 @@ uninstall-am:
 	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
 	pdf-am ps ps-am uninstall uninstall-am
 
-all: navn testmod m_ping m_join help modulehandler m_system searcher m_dns about_me \
-	ctcp encyclopedia weather world_clock da_goat channel_logger m_terminal_input
-	@echo " "
-	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
 navn:
 	@echo "This bot was created in C++ by Lordofsraam and Justasic from Flux-Net"
-	@echo "Navn Version @VERSION@-with-netflix-and-chicken"
+	@echo "Navn Version $(VERSION)-with-netflix-and-chicken"
 	@echo " "
 	@$(PERL) $(CXX) $(CFLAGS) -c main.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c misc.cpp
@@ -500,61 +497,68 @@ navn:
 	@$(PERL) $(CXX) $(CFLAGS) -c channel.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c INIReader.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c log.cpp
-	@$(PERL) $(CXX) $(CFLAGS)  main.o misc.o log.o segfault.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o process.o -o $(EXECUTABLE) -rdynamic
-testmod:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/testmod.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/testmod.so -o modules/testmod.so testmod.o
-m_ping:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_ping.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/m_ping.so -o modules/m_ping.so m_ping.o
-m_join:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_join.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/m_join.so -o modules/m_join.so m_join.o
-help:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/help.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/help.so -o modules/help.so help.o
-modulehandler:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/modulehandler.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/modulehandler.so -o modules/modulehandler.so modulehandler.o
-m_system:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_system.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/m_system.so -o modules/m_system.so m_system.o
-searcher:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/searcher.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/searcher.so -o modules/searcher.so searcher.o
-m_dns:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_dns.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/m_dns.so -o modules/m_dns.so m_dns.o
-about_me:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/about_me.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/about_me.so -o modules/about_me.so about_me.o
-ctcp:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/ctcp.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/ctcp.so -o modules/ctcp.so ctcp.o
-encyclopedia:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/encyclopedia.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/encyclopedia.so -o modules/encyclopedia.so encyclopedia.o
-weather:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/weather.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/weather.so -o modules/weather.so weather.o
-world_clock:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/world_clock.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/world_clock.so -o modules/world_clock.so world_clock.o
-da_goat:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/da_goat.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/da_goat.so -o modules/da_goat.so da_goat.o
-channel_logger:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/channel_logger.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/channel_logger.so -o modules/channel_logger.so channel_logger.o
-m_terminal_input:
-	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_terminal_input.cpp
-	@$(PERL) $(CXX) $(MODFLAGS)modules/m_terminal_input.so -o modules/m_terminal_input.so m_terminal_input.o
+	@$(PERL) $(CXX) $(CFLAGS)  main.o misc.o log.o segfault.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o process.o -o $(PACKAGE) -rdynamic
 
+about_me.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/about_me.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/about_me.cpp -o modules/about_me.so about_me.o
+channel_logger.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/channel_logger.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/channel_logger.cpp -o modules/channel_logger.so channel_logger.o
+ctcp.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/ctcp.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/ctcp.cpp -o modules/ctcp.so ctcp.o
+da_goat.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/da_goat.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/da_goat.cpp -o modules/da_goat.so da_goat.o
+encyclopedia.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/encyclopedia.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/encyclopedia.cpp -o modules/encyclopedia.so encyclopedia.o
+help.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/help.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/help.cpp -o modules/help.so help.o
+m_dns.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_dns.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/m_dns.cpp -o modules/m_dns.so m_dns.o
+m_join.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_join.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/m_join.cpp -o modules/m_join.so m_join.o
+modulehandler.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/modulehandler.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/modulehandler.cpp -o modules/modulehandler.so modulehandler.o
+m_ping.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_ping.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/m_ping.cpp -o modules/m_ping.so m_ping.o
+m_system.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_system.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/m_system.cpp -o modules/m_system.so m_system.o
+m_terminal_input.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_terminal_input.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/m_terminal_input.cpp -o modules/m_terminal_input.so m_terminal_input.o
+searcher.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/searcher.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/searcher.cpp -o modules/searcher.so searcher.o
+SimpleMod.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/SimpleMod.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/SimpleMod.cpp -o modules/SimpleMod.so SimpleMod.o
+testmod.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/testmod.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/testmod.cpp -o modules/testmod.so testmod.o
+weather.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/weather.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/weather.cpp -o modules/weather.so weather.o
+world_clock.so:
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/world_clock.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/world_clock.cpp -o modules/world_clock.so world_clock.o
+
+modules: about_me.so channel_logger.so ctcp.so da_goat.so encyclopedia.so help.so m_dns.so m_join.so modulehandler.so m_ping.so m_system.so m_terminal_input.so searcher.so SimpleMod.so testmod.so weather.so world_clock.so
+
+all-am: navn about_me.so channel_logger.so ctcp.so da_goat.so encyclopedia.so help.so m_dns.so m_join.so modulehandler.so m_ping.so m_system.so m_terminal_input.so searcher.so SimpleMod.so testmod.so weather.so world_clock.so
+	@echo " "
+	@echo "Build complete. Run \'./$(PACKAGE)\' to execute the binary."
 clean:
-	rm -f *.o *.so $(EXECUTABLE) config.h
-	@cd $(srcdir)/include
-	rm -f *.o *.so
-	@cd ..
+	rm -f *.o *.so $(PACKAGE) config.h config.status
+	rm -f *.o *.so $(srcdir)/modules/*.so
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
