--- a/configure.in
+++ b/configure.in
@@ -13,23 +13,52 @@ AC_PROG_CPP
 AC_PROG_MAKE_SET
 AC_LANG_CPLUSPLUS
 
+AC_PATH_PROG(unamepath, uname)
+if test "_$unamepath" = _; then
+	system="unknown"
+else
+	AC_MSG_CHECKING(system type)
+	system=`$unamepath -s`
+	AC_MSG_RESULT($system)
+fi
+
+case "$system" in
+	"Darwin")
+		;;
+	*)
+		CFLAGS="$CFLAGS -g -rdynamic"
+		LDFLAGS="$LDFLAGS -g -rdynamic"
+		;;
+esac
+
+AC_DEFINE_UNQUOTED(OS, "${host}", [cpu-machine-OS])
+
 # Checks for libraries.
 # FIXME: Replace `main' with a function in `-lpthread':
 AC_CHECK_LIB([pthread], [main])
+AC_CHECK_LIB(dl, dlopen)
+AC_CHECK_LIB(socket, socket)
 
 # Checks for header files.
 AC_FUNC_ALLOCA
 AC_HEADER_RESOLV
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h unistd.h pthread.h time.h execinfo.h setjump.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h unistd.h pthread.h time.h dlfcn.h execinfo.h setjump.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
+AC_HEADER_STDC
 AC_C_INLINE
 AC_TYPE_SIZE_T
+AC_CHECK_SIZEOF(off_t)
+AC_CHECK_TYPE(u_int64_t, unsigned long long)
+AC_CHECK_TYPE(u_int32_t, unsigned int)
+AC_CHECK_TYPE(u_int16_t, unsigned short)
+AC_CHECK_TYPE(u_int8_t, unsigned char) 
+
+
 
 # Checks for library functions.
 AC_FUNC_FORK
 AC_CHECK_FUNCS([atexit gethostbyname inet_ntoa memset select socket strerror strtol sysinfo uname backtrace gettimeofday])
-
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile modules/Makefile])
 AC_OUTPUT
