--- a/configure.in
+++ b/configure.in
@@ -60,5 +60,5 @@ AC_CHECK_TYPE(u_int8_t, unsigned char)
 # Checks for library functions.
 AC_FUNC_FORK
 AC_CHECK_FUNCS([atexit gethostbyname inet_ntoa memset select socket strerror strtol sysinfo uname backtrace gettimeofday])
-AC_CONFIG_FILES([Makefile modules/Makefile])
+AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
