Updated some docs

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -7,6 +7,7 @@
 # There are a few ways of doing comments in this config      #
 # 1. # (like python) You can't use # with midline comments   #
 # 2. ; (like mIRC)					     #
+# 3. /* */ (C++ multi-line)				     #
 # 							     #
 # Save as bot.conf and start navn with ./navn		     #
 # 							     #
