Assisted in reducing the random file spam that lordosraam's Encyclopedia module made, also updated changelog and whatnot

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -30,7 +30,7 @@ PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
 
 [Bot]
 Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
-Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
+Channel = #Test, #Navn ;The main channel, joins this channel on startup (default: #Test)
 Owner = n00b ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. (default: Navn)
 #NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
