--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,8 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([main.cpp])
 AC_CONFIG_HEADERS([config.h])
 
+AC_DEFINE(VERSION_EXTRA, "-with-netflix-and-chicken")
+
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CPP
@@ -54,7 +56,6 @@ AC_CHECK_TYPE(u_int64_t, unsigned long long)
 AC_CHECK_TYPE(u_int32_t, unsigned int)
 AC_CHECK_TYPE(u_int16_t, unsigned short)
 AC_CHECK_TYPE(u_int8_t, unsigned char) 
-
 
 
 # Checks for library functions.
