--- a/Config
+++ b/Config
@@ -21,6 +21,10 @@ else
 fi
 # Write to file
 modulelist=""
+githead=$(git rev-parse HEAD)
+rev=$(git describe ${githead} 2>/dev/null)
+[[ -z ${rev} ]] && rev=${githead:0:7}
+/bin/sed 's/^\x23define VERSION_GIT ".*"/\x23define VERSION_GIT "'$rev'"/' config.in.tmpl 1> config.h.in 
 echo "AUTOMAKE_OPTIONS 	= foreign" >> $MAKEFILE
 echo "PERL = \$(srcdir)/run-cc.pl" >> $MAKEFILE
 echo "LIBS = -pthread -ldl -lnsl -lrt -lstdc++" >> $MAKEFILE
@@ -30,7 +34,7 @@ echo "MODFLAGS = -fPIC -g \$(LIBS) -shared -Wl,-soname," >> $MAKEFILE
 echo "" >> $MAKEFILE
 echo "navn:
 	@echo \"This bot was created in C++ by Lordofsraam and Justasic from Flux-Net\"
-	@echo \"Navn Version \$(VERSION)-with-netflix-and-chicken\"
+	@echo \"Navn Version \$(VERSION)\$()\"
 	@echo \" \"
 	@\$(PERL) \$(CXX) \$(CFLAGS) -c main.cpp
 	@\$(PERL) \$(CXX) \$(CFLAGS) -c misc.cpp
