--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,8 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([main.cpp])
 AC_CONFIG_HEADERS([config.h])
 
-AC_DEFINE(VERSION_EXTRA, "-with-netflix-and-chicken")
+AC_DEFINE([VERSION_EXTRA], ["-with-netflix-and-chicken"], [Current version extra of the bot])
+AC_DEFINE([VERSION_GIT], [""], [Current git version])
 
 # Checks for programs.
 AC_PROG_CXX
