--- a/Makefile.in
+++ b/Makefile.in
@@ -35,9 +35,10 @@ subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
-	TODO install-sh missing
+	TODO depcomp install-sh missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/configure.in
+am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
+	$(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
@@ -479,7 +480,7 @@ uninstall-am:
 
 navn:
 	@echo "This bot was created in C++ by Lordofsraam and Justasic from Flux-Net"
-	@echo "Navn Version $(VERSION)$()"
+	@echo "Navn Version $(VERSION)"
 	@echo " "
 	@$(PERL) $(CXX) $(CFLAGS) -c main.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c misc.cpp
@@ -499,7 +500,6 @@ navn:
 	@$(PERL) $(CXX) $(CFLAGS) -c log.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c clock.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -L. main.o misc.o log.o signal.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o process.o clock.o -o $(PACKAGE) $(LIBS) -rdynamic
-
 about_me.so:
 	@$(PERL) $(CXX) $(CFLAGS) -c modules/about_me.cpp
 	@$(PERL) $(CXX) $(LIBS) $(MODFLAGS)modules/about_me.cpp -o modules/about_me.so about_me.o
@@ -561,8 +561,10 @@ all-am: navn about_me.so channel_logger.so ctcp.so da_goat.so encyclopedia.so he
 	@echo " "
 	@echo "Build complete. Run './$(PACKAGE)' to execute the binary."
 clean:
+	rm -f *.o *.so $(PACKAGE) modules/*.so
+dist-clean:
 	rm -f *.o *.so $(PACKAGE) config.h config.status
-	rm -f *.o *.so $(srcdir)/modules/*.so
+	rm -f *.o *.so modules/*.so
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
