Added INIReader::GetBoolean(), Added ability for user to specify the amount of time it takes for the socket engine to process, it is recommended this value is not zero, removed log message from BotConf class

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -35,7 +35,7 @@ Owner = n00b ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. (default: Navn)
 #NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
 #NickServ_Password = n00bpass ;NickServ password (comment out or remove if you dont have one)
-
+Socket Timeout = 5 ;timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
 
 ##############################################################
 #							     #
